--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ In fact,<cite>Jim Halpert</cite> once said this about beets,<q cite=""Fact, bear
   <li><a href="#">Early Wonder</a></li>
 </ol>
 <h2>Nutritional information</h2>
-<dt></dt>>Serving size:<data value="100">100 g</data></p>
+<dt></dt>Serving size:<data value="100">100 g</data>
 <dt>Energy:</dt> <dd>180 kJ</dd>
 <dt>Carbohydrates:</dt> <dd>9.96 g</dd>
 <dt>Fat:</dt> <dd>0.18 g</dd>
