--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav>
       <ol>
-        <li><<a href="#">Common varieties</a></li>
+        <li><a href="#">Common varieties</a></li>
         <li><a href="#">Nutritional information</a></li>
         <li><a href="#">Tags</a></li>
       </ol>
@@ -26,11 +26,11 @@
     </figure>
 
   </main>
-<time>55 to 65 days are needed from germination to harvest of the root.</time>
+<time> 55 to 65 days</time> <p>are needed from germination to harvest of the root.</p>
 
 <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
 
-In fact,<cite>Jim Halpert</cite> once said this about beets,<q cite=""Fact, bears eat beets.></q><i>Battlestar Galactica</i>.</p>
+In fact,<cite>Jim Halpert</cite>once said this about beets,<q cite="" Fact, bears eat beets.></q><i>Battlestar Galactica</i>.</p>
 
 <blockquote cite="http://I have some <em>weird</em> habits. For instance,<strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.">
 
@@ -45,6 +45,18 @@ In fact,<cite>Jim Halpert</cite> once said this about beets,<q cite=""Fact, bear
   <li><a href="#">Early Wonder</a></li>
 </ol>
 <h2>Nutritional information</h2>
+<dl>
+  <dt>Serving size:</dt>
+  <dd><data value="100">100 g</data></dd>
+  <dt>Energy:</dt>
+  <dd><data value="180 kJ">180 kJ</data></dd>
+  <dt>Carbohydrates:</dt>
+  <dd> <data value="9.96">9.96 g</data></dd>
+  <dt>Fat:</dt>
+  <dd><data value="0.18"></data>0.18 g</dd>
+  <dt>Protein:</dt>
+  <dd>1.68 g</dd>
+</dl>
 <dt></dt>Serving size:<data value="100">100 g</data>
 <dt>Energy:</dt> <dd>180 kJ</dd>
 <dt>Carbohydrates:</dt> <dd>9.96 g</dd>
