--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@ In fact,<cite>Jim Halpert</cite>once said this about beets,<q cite="" Fact, bear
   <dt>Protein:</dt>
   <dd>1.68 g</dd>
 </dl>
-<dt></dt>Serving size:<data value="100">100 g</data>
-<dt>Energy:</dt> <dd>180 kJ</dd>
-<dt>Carbohydrates:</dt> <dd>9.96 g</dd>
-<dt>Fat:</dt> <dd>0.18 g</dd>
-<dt>Protein:</dt> <dd>1.68 g</dd>
-<h2>Tags</h2>
+  <dt>Serving size:</dt>
+  <dd><data value="100">100 g</data></dd>
+  <dt>Energy:</dt> <dd>180 kJ</dd>
+  <dt>Carbohydrates:</dt>
+  <dd>9.96 g</dd>
+  <dt>Fat:</dt> <dd>0.18 g</dd>
+  <dt>Protein:</dt> <dd>1.68 g</dd>
+  <h2>Tags</h2>
 <ul>
 
 <li><a href="#">Crimson</a></li>
